samples/_failures_safe/1761426845_2b0b54_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85f8baa1.c: In function ‘main’:
./samples/SAFE/__tmp_85f8baa1.c:178:16: error: missing terminating " character
  178 |         printf("%
      |                ^~
./samples/SAFE/__tmp_85f8baa1.c:178:9: error: expected expression at end of input
  178 |         printf("%
      |         ^~~~~~
./samples/SAFE/__tmp_85f8baa1.c:178:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_85f8baa1.c:178:9: error: expected declaration or statement at end of input
